# rusty-bmp

./: .editorconfig  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/gui/: app.rs  crop_editor.rs  kernel_editor.rs  metadata.rs  mod.rs  palette.rs  resize_editor.rs  rotate_editor.rs  session.rs  side_panel.rs  skew_editor.rs  steg_embed_window.rs  steg_inspect_window.rs  toolbar.rs  translate_editor.rs  utils.rs  viewer.rs  zoom_bar.rs
src/gui/document/: inspect.rs  mod.rs  state.rs
src/gui/panels/: inspector.rs  mod.rs  toolbar.rs
src/gui/panels/viewer/: canvas.rs  crop_overlay.rs  mod.rs  viewport.rs  zoom_bar.rs
src/gui/save/: mod.rs  quality.rs  state.rs  workflow.rs
src/gui/steganography/: embed.rs  inspect.rs  mod.rs  state.rs
src/gui/tools/: mod.rs
src/gui/tools/color/: kernel.rs  mod.rs  tonal.rs
src/raw/: bmp.rs  error.rs  file_header.rs  helpers.rs  mod.rs
src/raw/bitmap_headers/: any.rs  core.rs  info.rs  mod.rs  v4.rs  v5.rs
src/raw/helpers/: bounded_reader.rs  bounded_stream.rs  color_table.rs  io.rs  mod.rs  wingdi.rs
src/raw/types/: bpp.rs  cie.rs  color_masks.rs  compression.rs  cs_type.rs  fixed_point.rs  gamma.rs  mod.rs  rgb.rs
src/runtime/: decode.rs  encode.rs  mod.rs  quantize.rs  steganography.rs  transform.rs
src/runtime/transform/: color.rs  convolution.rs  dispatch.rs  executor.rs  geometry.rs  mod.rs  model.rs  pipeline.rs  steganography.rs
tests/: bmpsuite.rs  runtime_decode_encode.rs
tests/bmpsuite/: dib_expectations.rs  roundtrip.rs  support.rs
(+7 files in other folders)
